--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve --port 8081",
     "build": "vue-cli-service build"
   },
   "dependencies": {
@@ -12,6 +12,7 @@
     "quasar": "^1.0.0",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
+    "vue-burger-menu": "^2.0.5",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
